# config-secret-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml
src/: lib.rs  secret.rs
tests/: secret_env.rs
tests/assets/: config.json  config.yaml
tests/helpers/: mod.rs  settings.rs
