[package]
name = "config-secret"
version = "0.1.0"
description = "A source for the config crate that follows the Docker/Kubernetes secret configuration convention"
homepage = "https://github.com/touchifyapp/config-secret-rs"
repository = "https://github.com/touchifyapp/config-secret-rs"
documentation = "https://docs.rs/config-secret"
readme = "README.md"
authors = ["Maxime LUCE <maxime@touchify.io>"]
keywords = ["config", "configuration", "settings", "env", "environment", "kubernetes", "k8s", "docker", "container", "containerd", "secret"]
categories = ["config"]
license = "MIT"
edition = "2021"


[dependencies]
config = { version = ">=0.13", default-features = false }


[dev-dependencies]
config = { version = "0.13", features = ["json", "yaml"] }
serde = "1"
temp-env = "0.3"
